// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntrySidebar/TranslationWidget when single locale mode is off should match snapshot 1`] = `
<EntrySidebarWidget
  headerNode={
    <Select
      className="css-1frdblk-selectStyles"
      hasError={false}
      isDisabled={false}
      onChange={[Function]}
      required={false}
      testId="cf-ui-select"
      value="multiple"
      width="auto"
      willBlurOnEsc={true}
    >
      <Option
        testId="cf-ui-select-option"
        value="multiple"
      >
        Multiple locales
      </Option>
      <Option
        testId="cf-ui-select-option"
        value="single"
      >
        Single locale
      </Option>
    </Select>
  }
  testId="sidebar-translation-widget"
  title="Translation"
>
  <TranslationWidgetPills
    emitter={
      Object {
        "emit": [MockFunction],
      }
    }
    localeData={
      Object {
        "activeLocales": Array [
          Object {
            "code": "en",
            "default": true,
            "internal_code": "en-US",
            "name": "English (United States)",
          },
          Object {
            "code": "de",
            "default": false,
            "internal_code": "de-DE",
            "name": "German (Germany)",
          },
          Object {
            "code": "es",
            "default": false,
            "internal_code": "es-AR",
            "name": "Spanish (Argentina)",
          },
          Object {
            "code": "ru",
            "default": false,
            "internal_code": "ru",
            "name": "Russian",
          },
        ],
        "errors": Object {},
        "focusedLocale": Object {
          "code": "en",
          "default": true,
          "internal_code": "en-US",
          "name": "English (United States)",
        },
        "isLocaleActive": [Function],
        "isSingleLocaleModeOn": false,
        "privateLocales": Array [
          Object {
            "code": "en",
            "default": true,
            "internal_code": "en-US",
            "name": "English (United States)",
          },
          Object {
            "code": "de",
            "default": false,
            "internal_code": "de-DE",
            "name": "German (Germany)",
          },
          Object {
            "code": "es",
            "default": false,
            "internal_code": "es-AR",
            "name": "Spanish (Argentina)",
          },
          Object {
            "code": "ru",
            "default": false,
            "internal_code": "ru",
            "name": "Russian",
          },
        ],
      }
    }
  />
</EntrySidebarWidget>
`;

exports[`EntrySidebar/TranslationWidget when single locale mode is on should match snapshot 1`] = `
<EntrySidebarWidget
  headerNode={
    <Select
      className="css-1frdblk-selectStyles"
      hasError={false}
      isDisabled={false}
      onChange={[Function]}
      required={false}
      testId="cf-ui-select"
      value="single"
      width="auto"
      willBlurOnEsc={true}
    >
      <Option
        testId="cf-ui-select-option"
        value="multiple"
      >
        Multiple locales
      </Option>
      <Option
        testId="cf-ui-select-option"
        value="single"
      >
        Single locale
      </Option>
    </Select>
  }
  testId="sidebar-translation-widget"
  title="Translation"
>
  <TranslationDropdownWidget
    emitter={
      Object {
        "emit": [MockFunction],
      }
    }
    localeData={
      Object {
        "activeLocales": Array [
          Object {
            "code": "en",
            "default": true,
            "internal_code": "en-US",
            "name": "English (United States)",
          },
          Object {
            "code": "de",
            "default": false,
            "internal_code": "de-DE",
            "name": "German (Germany)",
          },
          Object {
            "code": "es",
            "default": false,
            "internal_code": "es-AR",
            "name": "Spanish (Argentina)",
          },
          Object {
            "code": "ru",
            "default": false,
            "internal_code": "ru",
            "name": "Russian",
          },
        ],
        "errors": Object {},
        "focusedLocale": Object {
          "code": "en",
          "default": true,
          "internal_code": "en-US",
          "name": "English (United States)",
        },
        "isLocaleActive": [Function],
        "isSingleLocaleModeOn": true,
        "privateLocales": Array [
          Object {
            "code": "en",
            "default": true,
            "internal_code": "en-US",
            "name": "English (United States)",
          },
          Object {
            "code": "de",
            "default": false,
            "internal_code": "de-DE",
            "name": "German (Germany)",
          },
          Object {
            "code": "es",
            "default": false,
            "internal_code": "es-AR",
            "name": "Spanish (Argentina)",
          },
          Object {
            "code": "ru",
            "default": false,
            "internal_code": "ru",
            "name": "Russian",
          },
        ],
      }
    }
  />
</EntrySidebarWidget>
`;
